<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/img4">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que_no"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/orange1"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.043" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectedoption"
        android:id="@+id/selectedOption"
        android:visibility="gone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctoption"
        android:id="@+id/correctOption"
        android:visibility="gone"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/que1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/question"
        android:textColor="@color/white"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/optionA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/que1_A"
        android:textSize="25sp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:background="@drawable/option_bg"/>

    <TextView
        android:id="@+id/optionB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/que1_B"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:background="@drawable/option_bg"
        android:textAlignment="center"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="30dp">

    <TextView
        android:id="@+id/optionC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/que1_C"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:background="@drawable/option_bg"/>

    <TextView
        android:id="@+id/optionD"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/que1_D"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/option_bg"
        android:textAlignment="center"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/orange1"
        android:textSize="22sp"
       android:layout_gravity="end" />

</LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/orange1"
        android:indeterminate="false" />


</LinearLayout>